8.additional/service-mesh/product-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1
  namespace: mesh-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: v1

  template:
    metadata:
      labels:
        app: product
        version: v1
    spec:
      containers:
        - name: product
          image: hashicorp/http-echo
          args:
            - "-text=PRODUCT VERSION 1"
          ports:
            - containerPort: 5678
