8.additional/service-mesh/product-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v2
  namespace: mesh-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: v2

  template:
    metadata:
      labels:
        app: product
        version: v2
    spec:
      containers:
        - name: product
          image: hashicorp/http-echo
          args:
            - "-text=PRODUCT VERSION 2"
          ports:
            - containerPort: 5678
