8.additional/service-mesh/test-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: mesh-demo
spec:
  replicas: 1

  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client

    spec:
      containers:
        - name: client
          image: curlimages/curl
          command:
            - sleep
            - "3600"
