8.additional/service-mesh/product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: mesh-demo
spec:
  selector:
    app: product

  ports:
    - port: 80
      targetPort: 5678
