8.additional/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: product
  namespace: mesh-demo
spec:
  host: product

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
